# bazel_monorepo_go_rust

./: .bazelrc  BUILD.bazel  Cargo.toml  Makefile  README.md  WORKSPACE  cargo-bazel-lock.json  go.work  go.work.sum  go_deps.bzl
pkg/golang/: BUILD.bazel
pkg/golang/src/grpc_client_lib/: BUILD.bazel  go.mod  go.sum  lib.go  lib_test.go
pkg/rust/src/: BUILD.bazel
pkg/rust/src/grpc_client_lib/: BUILD.bazel  Cargo.toml  lib.rs
