## BUILD.bazel

package(default_visibility = ["//visibility:public"])

load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
rust_library(
    name = "grpc_client_lib",
    srcs = ["lib.rs"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(),
)


load("@rules_rust//rust:defs.bzl", "rust_test")
rust_test(
    name = "grpc_client_lib_test",
    srcs = ["lib.rs"],
    crate = ":grpc_client_lib"
)

#rust_test(
#    name = "grpc_client_lib_test",
#    srcs = ["lib.rs"],
#    deps = #[
#        # Depend on the library we just declared.
#        ## SEEMS TO NOT INCLUDE TRANSITIVE DEPENDENCIES; I HAD TO USE all_crate_deps().
#        all_crate_deps(),
#        #":grpc_client_lib",
#    #],
#)
